[gd_scene load_steps=22 format=2]

[ext_resource path="res://pageNumController.gd" type="Script" id=1]
[ext_resource path="res://log.gd" type="Script" id=2]
[ext_resource path="res://blockIcon/OUTPUT.png" type="Texture" id=3]
[ext_resource path="res://slotDetails.gd" type="Script" id=4]
[ext_resource path="res://blockIcon/INPUT.png" type="Texture" id=5]
[ext_resource path="res://blockIcon/ADD.png" type="Texture" id=6]
[ext_resource path="res://blockIcon/BRP.png" type="Texture" id=7]
[ext_resource path="res://blockIcon/BR.png" type="Texture" id=8]
[ext_resource path="res://blockIcon/STO.png" type="Texture" id=9]
[ext_resource path="res://blockIcon/SUB.png" type="Texture" id=10]
[ext_resource path="res://blockIcon/LDA.png" type="Texture" id=11]
[ext_resource path="res://blockIcon/BRZ.png" type="Texture" id=12]
[ext_resource path="res://blockIcon/HLT.png" type="Texture" id=13]
[ext_resource path="res://buttonIcon/favpng_reset-button-icon.png" type="Texture" id=14]
[ext_resource path="res://resetAll.gd" type="Script" id=15]
[ext_resource path="res://slotPos.gd" type="Script" id=16]
[ext_resource path="res://root.gd" type="Script" id=17]
[ext_resource path="res://buttonIcon/trashCan.png" type="Texture" id=18]
[ext_resource path="res://buttonIcon/back-button.png" type="Texture" id=19]
[ext_resource path="res://buttonIcon/run.png" type="Texture" id=20]
[ext_resource path="res://blockIcon/DAT.png" type="Texture" id=21]

[node name="Node2D" type="Node2D"]
script = ExtResource( 17 )

[node name="bg" type="ColorRect" parent="."]
margin_left = 754.91
margin_top = 0.922917
margin_right = 1024.92
margin_bottom = 598.923
color = Color( 0.207843, 0.207843, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot0" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 95.9596
margin_right = 934.234
margin_bottom = 120.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot0"]
margin_left = 38.0
margin_top = 5.00226
margin_right = 90.0
margin_bottom = 22.0023
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot0"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot0"]
margin_left = -33.238
margin_top = 4.37004
margin_right = -5.238
margin_bottom = 19.37
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot0"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot0"]
margin_left = 155.0
margin_right = 167.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 135.96
margin_right = 934.234
margin_bottom = 160.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot1"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot1"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot1"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot1"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot1"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot2" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 175.96
margin_right = 934.234
margin_bottom = 200.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot2"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot2"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot2"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot2"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot2"]
margin_left = 155.0
margin_right = 167.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot3" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 215.96
margin_right = 934.234
margin_bottom = 240.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot3"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot3"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot3"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot3"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot3"]
margin_left = 155.0
margin_right = 167.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot4" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 255.96
margin_right = 934.234
margin_bottom = 280.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot4"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot4"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot4"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot4"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot4"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot5" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 295.96
margin_right = 934.234
margin_bottom = 320.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot5"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot5"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot5"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot5"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot5"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot6" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 335.96
margin_right = 934.234
margin_bottom = 360.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot6"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot6"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot6"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot6"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot6"]
margin_left = 155.0
margin_right = 167.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot7" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 375.96
margin_right = 934.234
margin_bottom = 400.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot7"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot7"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot7"]
margin_left = -32.4443
margin_top = 5.0
margin_right = -4.4443
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot7"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot7"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot8" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 415.96
margin_right = 934.234
margin_bottom = 440.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot8"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot8"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot8"]
margin_left = -33.238
margin_top = 5.0
margin_right = -5.238
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot8"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot8"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot9" type="ColorRect" parent="."]
margin_left = 834.234
margin_top = 455.96
margin_right = 934.234
margin_bottom = 480.96
rect_pivot_offset = Vector2( -331.951, 105 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeString" type="RichTextLabel" parent="slot9"]
margin_left = 38.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 22.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="TextEdit" parent="slot9"]
visible = false
margin_left = 110.0
margin_top = -0.397
margin_right = 150.0
margin_bottom = 24.603
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockNum" type="RichTextLabel" parent="slot9"]
margin_left = -32.7083
margin_top = 5.0
margin_right = -4.70827
margin_bottom = 20.0
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="slot9"]
script = ExtResource( 16 )

[node name="discardButton" type="Button" parent="slot9"]
margin_left = 155.0
margin_right = 679.0
margin_bottom = 518.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IO_type_string" type="RichTextLabel" parent="."]
margin_left = 267.8
margin_top = 135.281
margin_right = 371.8
margin_bottom = 163.281
text = "IO Operation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hintTextDisplayer" type="RichTextLabel" parent="."]
margin_left = 320.441
margin_top = 29.5502
margin_right = 618.441
margin_bottom = 65.5502
text = "Drag blocks to start!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ALU_type_string" type="RichTextLabel" parent="."]
margin_left = 427.936
margin_top = 135.281
margin_right = 531.936
margin_bottom = 163.281
text = "ALU Operation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="br_type_string" type="RichTextLabel" parent="."]
margin_left = 246.587
margin_top = 300.203
margin_right = 385.587
margin_bottom = 329.203
text = "Branching operation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mem_type_string" type="RichTextLabel" parent="."]
margin_left = 418.044
margin_top = 300.105
margin_right = 550.044
margin_bottom = 332.105
text = "Memory Operation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="halt_type_string" type="RichTextLabel" parent="."]
margin_left = 591.641
margin_top = 135.63
margin_right = 689.641
margin_bottom = 157.63
text = "Halt Operation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dat_type_string" type="RichTextLabel" parent="."]
margin_left = 585.05
margin_top = 299.243
margin_right = 701.05
margin_bottom = 325.243
text = "Data Declaration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name=" IN" type="TouchScreenButton" parent="."]
position = Vector2( 249.385, 159.859 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 5 )
script = ExtResource( 2 )

[node name="OUT" type="TouchScreenButton" parent="."]
position = Vector2( 250.586, 206.47 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ADD" type="TouchScreenButton" parent="."]
position = Vector2( 414.852, 161.122 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 6 )
script = ExtResource( 2 )

[node name="SUB" type="TouchScreenButton" parent="."]
position = Vector2( 414.852, 207.842 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 10 )
script = ExtResource( 2 )

[node name=" BR" type="TouchScreenButton" parent="."]
position = Vector2( 250.503, 327.514 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 8 )
script = ExtResource( 2 )

[node name="BRZ" type="TouchScreenButton" parent="."]
position = Vector2( 250.503, 374.234 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 12 )
script = ExtResource( 2 )

[node name="BRP" type="TouchScreenButton" parent="."]
position = Vector2( 250.503, 418.951 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 7 )
script = ExtResource( 2 )

[node name="LDA" type="TouchScreenButton" parent="."]
position = Vector2( 416.105, 328.182 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 11 )
script = ExtResource( 2 )

[node name="STO" type="TouchScreenButton" parent="."]
position = Vector2( 416.772, 374.234 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 9 )
script = ExtResource( 2 )

[node name="HLT" type="TouchScreenButton" parent="."]
position = Vector2( 578.939, 160.753 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 13 )
script = ExtResource( 2 )

[node name="DAT" type="TouchScreenButton" parent="."]
position = Vector2( 579.939, 327.557 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 21 )
script = ExtResource( 2 )

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )

[node name="pageNumDisplayText" type="RichTextLabel" parent="."]
margin_left = 844.0
margin_top = 508.0
margin_right = 927.0
margin_bottom = 524.0
text = "Page: 1 / 10"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resetAllString" type="RichTextLabel" parent="."]
margin_left = 959.71
margin_top = 47.8028
margin_right = 1014.71
margin_bottom = 64.8028
custom_colors/default_color = Color( 1, 0.14902, 0.14902, 1 )
text = "Reset all"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="runString" type="RichTextLabel" parent="."]
margin_left = 778.0
margin_top = 47.802
margin_right = 805.0
margin_bottom = 63.802
custom_colors/default_color = Color( 0.172549, 1, 0, 1 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resetAllButton" type="Button" parent="."]
margin_left = 969.0
margin_top = 12.0
margin_right = 2581.0
margin_bottom = 1618.0
rect_scale = Vector2( 0.02, 0.02 )
icon = ExtResource( 14 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="previousPage" type="Button" parent="."]
margin_left = 780.0
margin_top = 540.0
margin_right = 881.0
margin_bottom = 575.0
text = "Previous Page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextPage" type="Button" parent="."]
margin_left = 900.0
margin_top = 540.0
margin_right = 1000.0
margin_bottom = 575.0
text = "Next Page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggingIcon" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 523.658, 403.045 )
scale = Vector2( 0.1, 0.1 )

[node name="backButton" type="Button" parent="."]
margin_left = 26.1811
margin_top = 20.6008
margin_right = 550.181
margin_bottom = 538.601
rect_scale = Vector2( 0.06, 0.06 )
icon = ExtResource( 19 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunButton" type="Button" parent="."]
margin_left = 777.211
margin_top = 12.5389
margin_right = 1310.21
margin_bottom = 665.539
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 20 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slotText" type="RichTextLabel" parent="."]
margin_left = 871.438
margin_top = 71.9203
margin_right = 900.438
margin_bottom = 87.9203
text = "Slot"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="slot0" to="slot0" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot0/Address" to="slot0" method="_on_Address_changed"]
[connection signal="pressed" from="slot0/discardButton" to="slot0" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot1" to="slot1" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot1/Address" to="slot1" method="_on_Address_changed"]
[connection signal="pressed" from="slot1/discardButton" to="slot1" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot2" to="slot2" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot2/Address" to="slot2" method="_on_Address_changed"]
[connection signal="pressed" from="slot2/discardButton" to="slot2" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot3" to="slot3" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot3/Address" to="slot3" method="_on_Address_changed"]
[connection signal="pressed" from="slot3/discardButton" to="slot3" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot4" to="slot4" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot4/Address" to="slot4" method="_on_Address_changed"]
[connection signal="pressed" from="slot4/discardButton" to="slot4" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot5" to="slot5" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot5/Address" to="slot5" method="_on_Address_changed"]
[connection signal="pressed" from="slot5/discardButton" to="slot5" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot6" to="slot6" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot6/Address" to="slot6" method="_on_Address_changed"]
[connection signal="pressed" from="slot6/discardButton" to="slot6" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot7" to="slot7" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot7/Address" to="slot7" method="_on_Address_changed"]
[connection signal="pressed" from="slot7/discardButton" to="slot7" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot8" to="slot8" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot8/Address" to="slot8" method="_on_Address_changed"]
[connection signal="pressed" from="slot8/discardButton" to="slot8" method="discardSingleSlotProperties"]
[connection signal="mouse_entered" from="slot9" to="slot9" method="_on_ColorRect_mouse_entered"]
[connection signal="text_changed" from="slot9/Address" to="slot9" method="_on_Address_changed"]
[connection signal="pressed" from="slot9/discardButton" to="slot9" method="discardSingleSlotProperties"]
[connection signal="pressed" from="resetAllButton" to="slot2" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot5" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot7" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot8" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot9" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot4" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot0" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot3" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot1" method="resetProperties"]
[connection signal="pressed" from="resetAllButton" to="slot6" method="resetProperties"]
[connection signal="pressed" from="previousPage" to="pageNumDisplayText" method="previousPagePressed"]
[connection signal="pressed" from="nextPage" to="pageNumDisplayText" method="nextPagePressed"]
[connection signal="pressed" from="backButton" to="." method="backToMenu"]
[connection signal="pressed" from="RunButton" to="." method="compile_LMC"]
